--- a/Train_Model.ipynb
+++ b/Train_Model.ipynb
@@ -73,7 +73,7 @@
         "!pip install roboflow\n",
         "\n",
         "from roboflow import Roboflow\n",
-        "rf = Roboflow(api_key=\"uXoLrkGAGnAB30dgRhYb\")\n",
+        "rf = Roboflow(api_key=\"\")\n",
         "project = rf.workspace(\"subek-yolo\").project(\"deteksi-warna-apel\")\n",
         "version = project.version(1)\n",
         "dataset = version.download(\"yolov8-obb\")\n"
